--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.4" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.96" />
       </ItemGroup>
 
   <PropertyGroup>
